🚍👜 Checkpoint ./index.html:574715/2851 ./.glitch-assets:574715/354

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link type="text/css" rel="stylesheet" href="script.js"/>
-    </head>
-    <body>
-
-      <h1>
-        Hello World!
-      </h1>
-      
-      <!--JavaScript at end of body for optimized loading-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script type="text/javascript" src="script.js"></script>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html>
+  <!--Content in the <head> element is about *HOW* to render the page - it is not visible.-->
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
+  </head>
+  
+  <!--Content in the body is *WHAT* will be displayed on the page.-->
+  <body>
+    <h1>
+      Stranger Quiz
+    </h1>
+    <div id="picturebox">
+      Your pictures will appear here
+    </div>
+    <div id="message">
+      When you've won, your victory will display here. 
+    </div>
+    
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
+</html>
