--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   
   <!--Content in the body is *WHAT* will be displayed on the page.-->
   <body>
-    <h1>
-      Stranger Quiz
-    </h1>
-    <div id="picturebox">
-      Your pictures will appear here
+    <div class="container">
+      <h1 id="quizTitle">
+        Stranger Quiz
+      </h1>
+      <div id="pictureBox">
+        Your pictures will appear here
+      </div>
+      <div id="message">
+        When you've won, your victory will display here. 
+      </div>
     </div>
-    <div id="message">
-      When you've won, your victory will display here. 
-    </div>
-    
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
