💷😅 Checkpoint ./index.html:574715/1207 ./style.css:574715/71 ./script.js:574715/258

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       <h1 id="quizTitle">
         Stranger Quiz
       </h1>
+      <div id="typeHere">
+        <input type="text" id="userInput">
+      </div>
       <div id="pictureBox">
-        Your pictures will appear here
+        <img src="https://cdn.glitch.com/01b27d37-a07e-4e2e-8caf-659256274937%2FScreen%20Shot%202019-08-08%20at%208.39.11%20AM.png?v=1565269664594"/>
       </div>
       <div id="message">
         When you've won, your victory will display here. 
